# MetroidNESRecomp

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  ISSUES.md  README.md  extract_banks.py  extract_data_regions.py  extract_dispatch_targets.py  extract_funcs.py  extras.c  extras.h  game.cfg  game.toml  nesrecomp.pin  nestopia_bridge.cpp  nestopia_bridge.h  recomp_stack.c  recomp_stack.h  watchdog.c  watchdog.h
.github/workflows/: release.yml
banks/: instructions.txt
nestopia-core/source/core/: NstCpu.hpp
tests/: baseline.json  test.config.json
tools/: check_6c.py  check_71c3.py  check_emu_sram.py  check_fd.py  check_sram.py  compare_49.py  deep_compare.py  multi_death.py  nes_compare.py  read_ptr.py  test_boot.txt  test_boot_observe.txt  test_entropy.txt  test_query.py  trace_scroll.py  watch_scroll.py
